[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/hud/ui_lifebar_fill.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/ui_lifebar_frame.png" type="Texture" id=2]
[ext_resource path="res://ui/hud/ui_lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/ui_progress_bar.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=5]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/juggernaut/juggernaut_monitor.gd" type="Script" id=6]
[ext_resource path="res://overlap/hitbox.gd" type="Script" id=7]
[ext_resource path="res://weapons/melee/knife/knife.png" type="Texture" id=8]
[ext_resource path="res://particles/burning/torch_burning_particles.tscn" type="PackedScene" id=10]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/juggernaut/juggernaut_voice.mp3" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 10 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 6 )
scaling_factor = 1.0
juggernaut_voice = ExtResource( 11 )

[node name="CooldownBar" type="TextureProgress" parent="."]
margin_left = -95.0
margin_top = 20.0
margin_right = 225.0
margin_bottom = 68.0
rect_scale = Vector2( 0.6, 0.8 )
step = 0.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.156863, 1, 0, 1 )
script = ExtResource( 4 )
progress_color = Color( 0.172549, 1, 0.145098, 1 )

[node name="Hint" type="Label" parent="CooldownBar"]
anchor_left = 0.5
anchor_top = 0.458
anchor_right = 0.5
anchor_bottom = 0.458
margin_left = -120.0
margin_top = -13.61
margin_right = 1.0
margin_bottom = 17.39
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0%"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="CooldownBar"]

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 150, -10 )
scale = Vector2( 4, 2 )
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource( 7 )

[node name="Knife" type="Sprite" parent="Hitbox"]
modulate = Color( 1, 0.796078, 0, 0.470588 )
texture = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.172549, 1, 0, 1 )
scale = Vector2( 4, 1 )
shape = SubResource( 1 )
disabled = true

[node name="BurningParticles" parent="Hitbox" instance=ExtResource( 10 )]
scale = Vector2( 3, 0.5 )
amount = 40
local_coords = false

[node name="BladeFuryDurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="BladeFuryDurationTimer" to="." method="_on_BladeFuryDurationTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
